# RubberSnakeBoat

./: Dockerfile  README.md  app.py  install-python-poetry.py  main.py  mypy.ini  pyproject.toml
.circleci/: config.yml
raft/: __init__.py
server/: __init__.py
store/: __init__.py
tests/: test_raft.py  test_raft_append_entries.py  test_raft_request_vote.py  test_raft_server.py  test_store.py  test_store_server.py
