[tool.poetry]
name = "RubberSnakeBoat"
version = "0.1.0"
description = "a toy k-v database using Raft in Python"
authors = ["Toma Morris <btmorr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
flask = "^2.3.2"
mypy = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
