[tool.poetry]
name = "RubberSnakeBoat"
version = "0.1.0"
description = "a toy k-v database using Raft in Python"
authors = ["Toma Morris <btmorr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.0"
mypy = "^1.4.1"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
